<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="417dp"
        android:layout_height="59dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_header" />


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:background="#00FFFFFF"
        android:outlineSpotShadowColor="@color/background"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton13"
        app:layout_constraintStart_toStartOf="@+id/imageButton13"
        app:layout_constraintTop_toTopOf="@+id/imageButton13"
        app:layout_constraintVertical_bias="0.558"
        app:srcCompat="@drawable/ic_header_back"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="163dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/regis"
        android:textColor="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="372dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/User"
        android:textColor="@color/fontdesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton13"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/editText11"
        android:layout_width="371dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Email"
        android:textColor="@color/fontdesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText10"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="369dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Phone"
        android:textColor="@color/fontdesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText11"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:background="#00FDFDFD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText12"
        app:srcCompat="@drawable/ic_register_radio_on"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="83dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/Male"
        android:textColor="@color/fontdesc"
        app:layout_constraintEnd_toStartOf="@+id/imageButton5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/editText12"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="40dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:background="#00FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/editText12"
        app:srcCompat="@drawable/ic_register_radio_off"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="220dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="87dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:text="@string/Female"
        android:textColor="@color/fontdesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton5"
        app:layout_constraintTop_toBottomOf="@+id/editText12"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/editText17"
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/BT"
        android:textColor="@color/fontdesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />


    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:layout_marginStart="128dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/editText17"
        app:layout_constraintStart_toStartOf="@+id/editText17"
        app:layout_constraintTop_toTopOf="@+id/editText17"
        app:layout_constraintVertical_bias="0.611"
        app:srcCompat="@drawable/ic_register_dropdown"
        tools:ignore="ContentDescription,MissingConstraints" />


    <EditText
        android:id="@+id/editText18"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Res"
        android:textColor="@color/fontdesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText17"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />


    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="24dp"
        android:layout_height="21dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/editText18"
        app:layout_constraintEnd_toEndOf="@+id/editText18"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="@+id/editText18"
        app:layout_constraintTop_toTopOf="@+id/editText18"
        app:layout_constraintVertical_bias="0.48"
        app:srcCompat="@drawable/ic_register_dropdown"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/editText13"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Pass"
        android:textColor="@color/fontdesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText18"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Rpass"
        android:textColor="@color/fontdesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText13"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="24dp"
        android:layout_height="28dp"
        android:layout_marginStart="48dp"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_register_radio_on"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="401dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="74dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/perso"
        android:textColor="@color/fontdesc"
        app:layout_constraintStart_toEndOf="@+id/imageButton6"
        app:layout_constraintTop_toBottomOf="@+id/editText14"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="32dp"
        android:layout_height="38dp"
        android:layout_marginStart="72dp"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:srcCompat="@drawable/ic_register_radio_off"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="401dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/Orga"
        android:textColor="@color/fontdesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton7"
        app:layout_constraintTop_toBottomOf="@+id/editText14"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="290dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/job"
        android:textColor="@color/fontdesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/ic_register_dropdown"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText15"
        android:layout_width="368dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Home"
        android:textColor="@color/fontdesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="MissingConstraints" />


    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="29dp"
        android:layout_height="27dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/editText16"
        app:layout_constraintEnd_toEndOf="@+id/editText16"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintStart_toStartOf="@+id/editText16"
        app:layout_constraintTop_toTopOf="@+id/editText16"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_blood_needed_location"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/editText16"
        android:layout_width="366dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Def"
        android:textColor="@color/fontdesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText15"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_register_terms_on"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="586dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="273dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Aggre"
        android:textColor="@color/fontdesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toEndOf="@+id/imageButton10"
        app:layout_constraintTop_toBottomOf="@+id/editText16"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="360dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00FFFFFF"
        android:text="REGISTER"
        android:outlineAmbientShadowColor="@color/lightblue"
        android:textColor="@color/lightblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.242"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="19dp" />


</android.support.constraint.ConstraintLayout>