<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserHome">


    <android.support.constraint.ConstraintLayout
        android:layout_width="419dp"
        android:layout_height="737dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00F9F9F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton16"
            android:layout_width="445dp"
            android:layout_height="159dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_header_side_menu" />

        <ImageButton
            android:id="@+id/imageButton17"
            android:layout_width="52dp"
            android:layout_height="60dp"
            android:layout_marginStart="28dp"
            android:background="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageButton16"
            app:layout_constraintVertical_bias="0.434"
            app:srcCompat="@drawable/ic_side_menu" />

        <ImageButton
            android:id="@+id/imageButton18"
            android:layout_width="54dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintStart_toEndOf="@+id/imageButton17"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15"
            app:srcCompat="@drawable/ic_notification" />

        <ImageButton
            android:id="@+id/imageButton19"
            android:layout_width="132dp"
            android:layout_height="93dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#00F9F9F9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/mypict"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="103dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="170dp"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/ahmad"
            android:textColor="@color/lightblue"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton19" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/type"
            android:textColor="@color/fonttitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="407dp"
            android:layout_height="455dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.833"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/tujuh"
                android:textColor="@color/lightblue"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/bgive"
                android:textColor="@color/fontdesc"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="104dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/seratus"
                android:textColor="@color/lightblue"
                android:textSize="30sp"
                app:layout_constraintStart_toEndOf="@+id/textView17"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/br"
                android:textColor="@color/fontdesc"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/textView18"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/tiga"
                android:textColor="@color/lightblue"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.607"
                app:layout_constraintStart_toEndOf="@+id/textView19"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="42dp"
                android:layout_height="18dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/tk"
                android:textColor="@color/fontdesc"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.672"
                app:layout_constraintStart_toEndOf="@+id/textView20"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="414dp"
                android:layout_height="356dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.266"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView20">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="121dp"
                    android:layout_height="96dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_search_donor" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="119dp"
                    android:layout_height="97dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_blood_needed" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="68dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/search"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/Searchdonor"
                    android:textColor="@color/fontdesc"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView23" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/need"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/textView23"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="108dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/needd"
                    android:textColor="@color/fontdesc"
                    android:textSize="10sp"
                    app:layout_constraintStart_toEndOf="@+id/textView24"
                    app:layout_constraintTop_toBottomOf="@+id/textView25" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="119dp"
                    android:layout_height="97dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="28dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView24"
                    app:srcCompat="@drawable/ic_message" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="119dp"
                    android:layout_height="97dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.508"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView26"
                    app:srcCompat="@drawable/ic_donor_history" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:layout_marginStart="68dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/message"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/newm"
                    android:textColor="@color/fontdesc"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView27"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="128dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/history"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/textView27"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/dhistory"
                    android:textColor="@color/fontdesc"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.606"
                    app:layout_constraintStart_toEndOf="@+id/textView28"
                    app:layout_constraintTop_toBottomOf="@+id/textView29"
                    app:layout_constraintVertical_bias="0.0" />
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>